--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,10 +1,25 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
-
+  <%= render "public/shared/error_messages", resource: resource %>
+  
+  <%= f.label :ニックネーム %>
+  <%= f.text_field :nickname %></br>
+  
+   <%= f.label :年齢 %>
+  <%= f.text_field :age %></br>
+  
+   <%= f.label :自己紹介 %>
+  <%= f.text_field :introduction %></br>
+  
+  <%= f.radio_button :sex, User.sexes.key(0) %>
+  <%= f.label :sex, User.sexes_i18n[:man] %>
+  
+  <%= f.radio_button :sex, User.sexes.key(1) %>
+  <%= f.label :sex, User.sexes_i18n[:woman] %><br>
+  
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -12,12 +27,12 @@
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
