--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
 
   <body>
     <% if user_signed_in? %>
-    <h2><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></h2>
+    <h2><%= link_to "会員ログアウト", destroy_user_session_path, method: :delete %></h2>
+    
+    <% elsif admin_signed_in? %>
+    <h2><%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %></h2>
     
     <% else %>
     <h2><%= link_to "ログイン", new_user_session_path %></h2>
