--- a/app/views/public/institutions/show.html.erb
+++ b/app/views/public/institutions/show.html.erb
@@ -14,4 +14,51 @@
 <%= @institution.telephone_number %></br>
 <%= @institution.introduction %><br>
 <h2><%= link_to "編集", edit_institution_path(@institution.id) %></h2>
-<h2><%= link_to "削除", institution_path(@institution.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></h2>
+<h2><%= link_to "削除", institution_path(@institution.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></h2></br>
+
+<% if @institution.bookmarked_by?(current_user) %>
+      <td><%= link_to "ブックマークを外す", institution_bookmarks_path(@institution), method: :delete %></td>
+    <% else %>
+      <td><%= link_to "ブックマーク", institution_bookmarks_path(@institution), method: :post %></td>
+    <% end %>
+
+<%= form_with model: [@institution,@review] do |f| %>
+
+<div class="field" id="star">
+  <%= f.label :star, "星評価：" %>
+  <%= f.hidden_field :star, id: :review_star %>
+  <script>
+    $('#star').raty({
+      size     : 36,
+      starOff:  '<%= asset_path('star-off.png') %>',
+      starOn : '<%= asset_path('star-on.png') %>',
+      starHalf: '<%= asset_path('star-half.png') %>',
+      scoreName: 'post[star]',   # starカラムへの保存
+      half: true,   # 星半分の入力
+    });
+  </script>
+</div>
+
+タイトル<%= f.text_field :title %></br>
+レビュー内容<%= f.text_area :content %></br>
+訪問日<%= f.date_field :date %></br>
+
+サウナ飯名<%= f.text_field :food_name %></br>
+サウナ飯住所<%= f.text_field :food_address %></br>
+サウナ飯コメント<%= f.text_field :food_comment %></br>
+
+サウナ観光地名<%= f.text_field :trip_name %></br>
+サウナ観光地住所<%= f.text_field :trip_address %></br>
+サウナ観光地コメント<%= f.text_field :trip_comment %></br>
+
+<%= f.submit 'レビュー投稿', class: 'btn btn-success px-4' %>
+<% end %>
+
+<% @institution.reviews.each do |review| %>
+<%= link_to  institution_review_path(@institution,review.id) do %>
+<%= review.id %>
+<%= review.title %></br>
+<%= review.trip_name %></br>
+<% end %>
+<% end %>
+
