--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @user.nickname %></h1>
+ <%= image_tag @user.get_profile_image(100,100), class: "rounded-circle" %>
 <h1><%= @user.age %>歳</h1>
 <h1><%= @user.introduction %></h1>
 <h1><%= User.sexes_i18n[@user.sex] %></h1>
