--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,68 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
-  <body>
-    <% if user_signed_in? %>
-    <h2><%= link_to "会員ログアウト", destroy_user_session_path, method: :delete %></h2>
+  
+  <header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+      <div class="container"> <a class="navbar-brand" href="/">
+        <span>さうなび</span></a>  
+   
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+    <% if user_signed_in? %>         
+              <li>
+                <%= link_to user_path(current_user.id), class: "nav-link text-light"  do %> <i class="fas fa-home"></i>マイページ
+                  <% end %>
+              </li>
+              
+              <li>
+                <%= link_to institutions_path, class: "nav-link text-light"  do %> <i class="fas fa-book-open"></i>サウナ一覧
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to destroy_user_session_path, class: "nav-link text-light", method: :delete do %><i class="fas fa-sign-out-alt"></i>ログアウト
+                  <% end %>
+              </li>
+  <% elsif admin_signed_in? %>
+    <li><%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %></li>
     
-    <% elsif admin_signed_in? %>
-    <h2><%= link_to "管理者ログアウト", destroy_admin_session_path, method: :delete %></h2>
-    
-    <% else %>
-    <h2><%= link_to "ログイン", new_user_session_path %></h2>
-    <h2><%= link_to "新規登録", new_user_registration_path %></h2>
-    
-    <% end %>
-    
-    
-    <%= yield %>
-  </body>
+  <% else %>
+              <li>
+                <%= link_to root_path, class: "nav-link text-light"  do %> <i class="fas fa-home"></i>Home
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to about_path, class: "nav-link text-light"  do %> <i class="fas fa-link"></i>About
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_registration_path, class: "nav-link text-light"  do %><i class="fas fa-user-plus"></i>Sign up
+                  <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path, class: "nav-link text-light" do %><i class="fas fa-sign-in-alt"></i>Log in
+                  <% end %>
+              </li>
+             <% end %>
+            </ul>
+          </div>
+      </div>
+  </nav>
+  </header>
+  <main>
+      <%= yield %>
+      </main>  
+        <footer>
+          <div class="container mt-5">
+            <div class="row">
+              <div class="mx-auto">
+                <p>CopyRight Infratop.inc</p>
+              </div>
+            </div>
+          </div>
+        </footer>
+        </body>
 </html>
