--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,44 +1,62 @@
-<h2>新規会員登録</h2>
-
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-xl-9 ml-auto">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
   
-  <%= f.label :ニックネーム %>
-  <%= f.text_field :nickname %></br>
+<h4>新規会員登録</h4>
+<table>
+  <tr>
+
+  <td><%= f.label :ニックネーム %></td>
+  <td><%= f.text_field :nickname %></td>
+  </tr>
+  <tr>
+   <td><%= f.label :年齢 %></td>
+  <td><%= f.text_field :age %></td>
+  <tr>
+   <td><%= f.label :自己紹介 %></td>
+  <td><%= f.text_field :introduction %></td>
+  </tr>
   
-   <%= f.label :年齢 %>
-  <%= f.text_field :age %></br>
-  
-   <%= f.label :自己紹介 %>
-  <%= f.text_field :introduction %></br>
-  
-  <%= f.radio_button :sex, User.sexes.key(0) %>
+  <tr>
+    <td><%= f.label :性別 %></td>
+  <td><%= f.radio_button :sex, User.sexes.key(0) %>
   <%= f.label :sex, User.sexes_i18n[:man] %>
   
   <%= f.radio_button :sex, User.sexes.key(1) %>
-  <%= f.label :sex, User.sexes_i18n[:woman] %><br>
+  <%= f.label :sex, User.sexes_i18n[:woman] %></td>
+  </tr>
   
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <tr>
+    <td><%= f.label :メールアドレス %></td>
+    <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+  </tr>
 
-  <div class="field">
-    <%= f.label :password %>
+  <tr>
+    <td><%= f.label :パスワード（6文字以上） %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <% end %></td>
+    <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+  </tr>
+  
+  <tr>
+    <td><%= f.label :パスワード（確認用） %></td>
+    <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+ </tr>
+ 
+ <tr>
+   <td></td>
+   <td><%= f.submit "新規登録", class: "btn btn-success ml-5" %></td>
+ </tr>
+ <% end %>
+</table>
+ 
+      
+<h4>既に登録済みの方</h4>
+      <p><%= render "public/shared/links" %>からログインしてください。</p>
+   
+ </div>
+ </div>
+ </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
