--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,19 +1,43 @@
+<div class="container">
+  <div class="row pt-5">
+    <div class="col-xl-9 ml-auto">
 <%= form_with model: @user, url: user_path, method: :patch do |f| %>
-<%= f.label :ニックネーム %>
-  <%= f.text_field :nickname %></br>
+<h4>会員情報編集</h4>
+<table>
+  <tr>
+  <td><%= f.label :ニックネーム %></td>
+  <td><%= f.text_field :nickname,:size=>"40" %></td>
+  </tr>
+  <tr>
+  <td><%= f.label :profile_image, '画像' %></td>
+  <td><%= f.file_field :profile_image  %></td>
+  </tr>
+  <tr>
+   <td><%= f.label :年齢 %></td>
+  <td><%= f.text_field :age,:size=>"40" %></td>
+  <tr>
+   <td><%= f.label :自己紹介 %></td>
+  <td><%= f.text_field :introduction,:size=>"40" %></td>
+  </tr>
   
-   <%= f.label :年齢 %>
-  <%= f.text_field :age %></br>
-  
-   <%= f.label :自己紹介 %>
-  <%= f.text_field :introduction %></br>
-  
-  <%= f.radio_button :sex, User.sexes.key(0) %>
+  <tr>
+    <td><%= f.label :性別 %></td>
+  <td><%= f.radio_button :sex, User.sexes.key(0) %>
   <%= f.label :sex, User.sexes_i18n[:man] %>
   
   <%= f.radio_button :sex, User.sexes.key(1) %>
-  <%= f.label :sex, User.sexes_i18n[:woman] %><br>
+  <%= f.label :sex, User.sexes_i18n[:woman] %></td>
+  </tr>
   
-  <%= f.submit "編集内容保存" %>
-  <% end %>
-  <h1><%= link_to "編集", edit_user_path(@user.id) %></h1>
+  
+ <tr>
+   <td></td>
+   <td><%= f.submit "編集内容保存", class: "btn btn-success ml-5" %>
+   <%= link_to "退会する", users_cancel_path, class: "btn btn-danger ml-5" %></td>
+ </tr>
+ <% end %>
+</table>
+
+</div>
+ </div>
+ </div>
