--- a/app/views/public/institutions/index.html.erb
+++ b/app/views/public/institutions/index.html.erb
@@ -1,22 +1,23 @@
-<%= link_to '施設新規登録', new_institution_path, class: 'btn btn-success px-4' %>
 <div class="container">
-  <div class="row">
-   
+  <div class="row pt-4">
+   <div class="col-md-3 offset-md-2">
    <div class="post_search">
   <%= form_with url: search_path, method: :get, local: true do |f| %>
+    <div>
     <%= f.text_field :search, class: 'form-control', placeholder: "キーワード検索"  %>
-    <%= f.button :type => "submit" do %>
-      <i class="fas fa-search"></i>
-    <% end %>
+    <%= f.submit "検索", class: "btn btn-primary" %>
   <% end %>
+   </div>
 </div>
-
+</div>
+<div class="col-md-5">
 <div class="area_search">
   <%= form_with url: area_path, method: :get, local: true do |f| %>
   <%= f.select :area, Institution.areas.keys.map {|k| [I18n.t("enums.institution.area.#{k}"), k]}, { include_blank: "選択してください"  }, class: "mb-3 sm:mb-0 mr-9 border border-line-200 rounded-[3px] rounded-[3px] py-3 pl-6 w-52 h-12 font-bold" %>
   <%= f.button :type => "submit" do %>
   <% end %>
   <% end %>
+</div>
 </div>
       
       <div class="col-md-8 offset-md-1">
